@@ -1,25 +1,24 @@
+package ExpenseManagement;
+
 import com.automation.test.TestAction;
 import com.automation.test.TestCase;
 import constants.HttpMethod;
-import helper.SQLHelper;
-import object.SQLConnectionInfor;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.sql.Connection;
-import java.sql.SQLException;
 import java.util.Collections;
+import java.util.List;
 
-public class ExpenseManagementApiTest extends AbstractExpenseManagementTest{
+public class ExpenseManagementApiTest extends AbstractExpenseManagementTest {
 
     @DataProvider(name = "apiTestData")
     public Object[][] apiTestData() {
         return new Object[][]{
                 {
-                        "Case 1", "GET - category p2p by config", 200,
+                        "Case 1", "GET - Get category p2p by config",
                         "{\n" +
-                                "    \"user\": \"0909498115\",\n" +
+                                "    \"user\": \"0909498114\",\n" +
                                 "    \"result\": true,\n" +
                                 "    \"errorCode\": 0,\n" +
                                 "    \"errorDesc\": \"\",\n" +
@@ -34,27 +33,28 @@ public class ExpenseManagementApiTest extends AbstractExpenseManagementTest{
                 }
         };
     }
-    @Test(dataProvider = "apiTestData")
-    public void getCategoryP2p(String name, String desc,  int status, String expectedBody) throws IOException, SQLException, ClassNotFoundException {
 
+    @Test(dataProvider = "apiTestData")
+    public void getCategoryP2p(String name, String desc, String expectedBody) throws IOException {
         // create test case
         TestCase tc = new TestCase(name, desc);
 
         // create test step 1
         String step = "Verify response data of request";
-        String path =  "category-p2p";
-        TestAction testAction = sendApi(step,path,signatureValue,null, HttpMethod.GET,status, expectedBody,Collections.singletonList("time"));
+        String path = "/category-p2p";
+        TestAction testAction = sendApi(step, path, signatureValue, null, HttpMethod.GET, expectedBody, List.of("expenseCategories", "time"));
         // actual
 
         //add step & run
         tc.addStep(testAction);
         tc.run();
     }
+
     @DataProvider(name = "getMoneySourceTestData")
     public Object[][] getMoneySourceTestData() {
         return new Object[][]{
                 {
-                        "Case 2", "GET - money source", 200,
+                        "Case 10", "GET - Get money source",
                         "{\n" +
                                 "                \"idNew\": 0,\n" +
                                 "                \"moneySourceType\": null,\n" +
@@ -64,7 +64,7 @@ public class ExpenseManagementApiTest extends AbstractExpenseManagementTest{
                                 "                \"groupMoneySource\": 0,\n" +
                                 "                \"extras\": null,\n" +
                                 "                \"id\": 10000,\n" +
-                                "                \"userId\": \"0909498115\",\n" +
+                                "                \"userId\": \"0909498114\",\n" +
                                 "                \"moneySourceCredit\": 0,\n" +
                                 "                \"creditAvailable\": 0,\n" +
                                 "                \"isDeleted\": 0,\n" +
@@ -78,18 +78,20 @@ public class ExpenseManagementApiTest extends AbstractExpenseManagementTest{
     }
 
     @Test(dataProvider = "getMoneySourceTestData")
-    public void getMoneySource(String name, String desc,  int status, String expectedBody) throws IOException {
+    public void getMoneySource(String name, String desc, String expectedBody) throws IOException {
         // create test case
         TestCase tc = new TestCase(name, desc);
 
         // create test step 1
         String step = "Verify response data of request";
-        String path = "money-source";
-        TestAction testAction = sendApiContains(step,path,signatureValue,null, HttpMethod.GET,status, String.format(expectedBody,info.getBalance()),Collections.singletonList("time"));
+        String path = "/money-source";
+        TestAction testAction = sendApiContains(step, path, signatureValue, null, HttpMethod.GET, String.format(expectedBody, info.getBalance()), Collections.singletonList("time"));
         // actual
 
         //add step & run
         tc.addStep(testAction);
         tc.run();
     }
+
+
 }
